k8s-gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  selector:
    app: frontend-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 30
      targetPort: 3000
