k8s-gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: np-kubernetes-ingress
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: 'gce'
spec:
  # rules:
  #   - host: selfeducation.com
  #     http:
  #       paths:
  #         - path: /
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: frontend-app
  #               port:
  #                 number: 30
  defaultBackend:
    service:
      name: frontend-app
      port:
        number: 30
